text overflow fix file name

--- a/src/app/components/staff-data/staff-data.component.css
+++ b/src/app/components/staff-data/staff-data.component.css
@@ -139,6 +139,8 @@
                 width: 260px;
                 padding-left: 30px;
                 color: #848495;
+                padding-right: 30px;
+                text-overflow: ellipsis;
               }
 
               .card {
